major bug fixes after testing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,10 @@ codice.notblank="Il codice deve essere valorizzato!"
 descrizione.notblank="La descrizione deve essere valorizzata"
 dataInizioServizio.notnull="La data di inizio servizio deve essere valorizzata"
 numeroPasseggeri.notnull="Il numero dei passeggeri deve essere valorizzato"
+#Tratta
+codice.notblank="Il codice deve essere valorizzato!"
+descrizione.notblank="La descrizione deve essere valorizzata"
+data.notnull="La data deve essere valorizzata"
+oraDecollo.notnull="L'ora di decollo deve essere valorizzata"
+oraAtterraggio.notnull="L'ora di atterraggio deve essere valorizzata"
+airbus.notnull="La tratta deve avere un airbus associato"
